finished execute script added a lot of exceptions almost finished this lab